tests/analyzer/errors/optional_cond_alias.ray
fn getValue() -> float { return 6.5 }
fn main() {
    // Check if variable isn't available in outer scope
    var ok: ?float = 9.
    if ok as v {}
    print v

    if getValue() as e {}
}
